--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <button class = "btn" >Retrieve Data</button>
     <div class = "card-controller"></div>
-    <script type = "module" src="main.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
